# tetra-demosite

./: .gitignore  LICENSE  Makefile  README.md  package.json  pyproject.toml
demo/: apps.py  models.py  tasks.py  urls.py  utils.py  views.py
demo/components/default/info_card/: __init__.py
demo/components/default/news_ticker/: __init__.py
demo/components/default/todo_item/: __init__.py
demo/components/default/todo_list/: __init__.py  todo_list.html
demo/components/examples/disable_button/: __init__.py  disable_button.html
demo/components/examples/download_button/: __init__.py  download_button.html
demo/locale/de/LC_MESSAGES/: django.po
demo/locale/es/LC_MESSAGES/: django.po
demo/migrations/: 0005_todo_model_version.py
demo/templates/: base.html  index.html  todo_models.py
demo/templates/examples/counter/: text.md
demo/templates/examples/disable_button/: text.md
demo/templates/examples/download_button/: demo.html  text.es.md  text.md
demosite/: settings.py
locale/es/LC_MESSAGES/: django.po
